Used overscroll:none since it fully removes any overscroll on mobile (if supported). Also added preventScroll:true for input so native auto-scroll on input:focus should be disabled.

--- a/site/src/app.css
+++ b/site/src/app.css
@@ -8,6 +8,10 @@ body {
 }
 
 @layer utilities {
+    .chain-scroll-only {
+        @apply max-lg:overscroll-none;
+    }
+
     /* Please apply "custom-scrollbar" class for scrollable elements 
     (elements with class of overflow-scroll or overflow-auto) */
     .custom-scrollbar {
